<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 <string name="app_name">settings</string>

 <string name="model_number">Model number :</string>
 <string name="firmware_version">Android version :</string>
 <string name="kernel_version">Kernel version :</string>
 <string name="build_number">Build number : </string>
 <string name="about">About Box</string>
 <string name="internet_setting">Net Settings</string>
 <string name="wifi">Wifi</string>
 <string name="wifi_open">Open Wifi</string>
 <string name="wifi_close">Close Wifi</string>
 <string name="ethernet">Ethernet</string>
 <string name="ethernet_setting">Ethernet settings</string>
 <string name="ethernet_status">Connect to the wireless network, if connecting cable, please plug in the network line</string>
 <string name="screen_timeout_summary">After <xliff:g id="timeout_description">%1$s</xliff:g> of inactivity</string>
 <string name="screen_timeout_title">When to sleep</string>
 <string name="switch_on_text">On</string>
 <string name="switch_off_text">Off</string>
 <string name="screen_resolution_best">Auto switch to best resolution</string>
 <string name="screen_resolution">Screen resolution</string>
 <string name="screen_resolution_selection">Screen resolution selection</string>
 <string name="screen_position">Screen position</string>
 <string name="scrren_sleep">Sleep</string>
 <string name="font_setting">Font settings</string>
 <string name="oobe_screen_tips">Press UP or DOWN arrow keys on your remote,  until the white borders appear on the edge of TV screen</string>

 <string name="title_font_size">Font size</string>
 <string name="summary_font_size" translatable="false">%1$s</string>
 <string name="dialog_title_font_size">Font size</string>
 <string name="keywords_display_font_size">text size</string>
 <string name="global_font_change_title">Change font size</string>

 <string name="font_size_small">small</string>
 <string name="font_size_normal">normal</string>
 <string name="font_size_large">large</string>
 <string name="font_size_huge">huge</string>

 <string name="display_filter_outputmode"></string>
 <string name="display_self_setting">HDMI Output Mode Setting :</string>
 <string name="display_self_setting_value">self select:(HDMI 1080I 50HZ)</string>
 <string name="display_auto">HDMI auto-detection</string>
 <string name="display_auto_value">auto setting by system </string>
 <string name="output_popup_window_title">Output Modes</string>

</resources>
