<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:background="@drawable/bg"
    
     >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_resolution"
        android:textColor="@color/white"
        android:id="@+id/button_resolution" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_position"
        android:textColor="@color/white"
        android:layout_toRightOf="@id/button_resolution"
        android:id="@+id/button_rotation" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scrren_sleep"
        android:textColor="@color/white"
        android:layout_toRightOf="@id/button_rotation"
        android:id="@+id/button_daydream" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_setting"
        android:textColor="@color/white"
        android:layout_toRightOf="@id/button_daydream"
        android:id="@+id/button_fontsetting" />

    
</RelativeLayout>